// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AvatarEntity /> should render a avatar entity with lots of data 1`] = `
<styled.div
  className="avatar-entity"
  isHoverable={false}
>
  <styled.div>
    <Avatar
      imageUrl="www.example.com"
      initials="JW"
      size="medium"
      statusDot="primary"
    />
  </styled.div>
  <styled.div>
    <Text
      color="#424F5C"
      isInline={false}
      type="body"
    >
      John Wick
    </Text>
    <styled.span
      isCompact={false}
    >
      <Text
        color="#667380"
        isInline={false}
        isTruncated={true}
        type="xsmall"
      >
        Guy Killer
      </Text>
    </styled.span>
    <Text
      color="#667380"
      isInline={false}
      isTruncated={true}
      type="xsmall"
      weight="heavy"
    >
      In Cinemas 2019
    </Text>
  </styled.div>
</styled.div>
`;

exports[`<AvatarEntity /> should render a basic avatar entity 1`] = `
<styled.div
  className="avatar-entity"
  isHoverable={false}
>
  <styled.div>
    <Avatar
      initials="JW"
      size="medium"
    />
  </styled.div>
  <styled.div>
    <Text
      color="#424F5C"
      isInline={false}
      type="body"
    >
      John Wick
    </Text>
  </styled.div>
</styled.div>
`;

exports[`<AvatarEntity /> should render a basic compact avatar entity 1`] = `
<styled.div
  className="avatar-entity"
  isHoverable={false}
>
  <styled.div>
    <Avatar
      initials="JW"
      size="small"
    />
  </styled.div>
  <styled.div>
    <Text
      color="#424F5C"
      isInline={true}
      type="body"
    >
      John Wick
    </Text>
  </styled.div>
</styled.div>
`;

exports[`<AvatarEntity /> should render a compact avatar entity with lots of data 1`] = `
<styled.div
  className="avatar-entity"
  isHoverable={false}
>
  <styled.div>
    <Avatar
      imageUrl="www.example.com"
      initials="JW"
      size="small"
      statusDot="primary"
    />
  </styled.div>
  <styled.div>
    <Text
      color="#424F5C"
      isInline={true}
      type="body"
    >
      John Wick
    </Text>
    <styled.span
      isCompact={true}
    >
      <Text
        color="#667380"
        isInline={true}
        isTruncated={true}
        type="xsmall"
      >
        (Guy Killer)
      </Text>
    </styled.span>
  </styled.div>
</styled.div>
`;
